# fastfood-sales-forecast

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  Dockerfile.worker  Makefile  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
frontend/: Dockerfile.frontend  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
infra/minio/: create_buckets.sh
infra/postgres/: init.sql
src/agents/: orchestrator.py
src/agents/tools/: data_tools.py  forecast_tools.py  mlflow_tools.py  model_tools.py
src/api/: dependencies.py  main.py
src/api/routers/: agents.py  forecasts.py  health.py  restaurants.py  sales.py
src/api/schemas/: agents.py  forecasts.py  restaurants.py  sales.py
src/core/: config.py  exceptions.py  logging.py
src/db/: engine.py
src/db/migrations/: env.py
src/db/migrations/versions/: 001_initial_schema.py
src/db/models/: __init__.py  forecast.py  restaurant.py  sales.py
src/ml/evaluation/: metrics.py
src/ml/features/: calendar.py  lag_features.py  pipeline.py
src/ml/models/: base.py  xgboost_model.py
src/ml/training/: cross_validation.py  trainer.py
src/scripts/: seed_synthetic.py
src/workers/: celery_app.py
src/workers/tasks/: training.py
